# tal_experiments

./: shrub.tal
shrub/: Cargo.toml  prompt_1st.txt  shrub.rom  shrub.tal
shrub/ollama-rs/: Cargo.toml
shrub/ollama-rs/ollama-rs/: run_history.txt  run_report.md
shrub/ollama-rs/ollama-rs/examples/: options_from_json.rs  run_report.md  shrub_gen.rs
shrub/src/: _Modelfile
