[package]
name = "shrub"
version = "0.1.0"
edition = "2024"

[dependencies]
fs2 = "0.4.3"
futures-util = "0.3.31"
ollama-rs = { version = "0.3.2", features = [
  "macros",
  "ollama-rs-macros",
  "tool-implementations",
      "stream",
    "headers",
] }
reqwest = "0.12.24"
schemars = { version = "1.0.4", features = ["preserve_order"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.15.1"
#tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.17", features = ["io-util"] } 
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
genai = "0.4.2"
uxn-tal = "0.4.0"
